--- a/resonance/circle.html
+++ b/resonance/circle.html
@@ -73,7 +73,7 @@
 			if (isNaN(control)) {
 				control = 1;
 			}
-			
+
 			init();
 			animate();
 
@@ -250,6 +250,7 @@
 
 			function render() {
 				controls.update();
+				audioScene.setListenerPosition(camera.position.x, camera.position.y , camera.position.z);
 				renderer.render( scene, camera );
 			}
 
