--- a/resonance/spiral.html
+++ b/resonance/spiral.html
@@ -107,10 +107,9 @@
 
 				radius = X / 2;
 				if (Z > X) radius = Z / 2;
-				console.log(radius)
 
 				// Create <audio> streaming audio source.
-				var audioContext = new (window.AudioContext || window.webkitAudioContext);
+				var audioContext = new AudioContext();
 
 				// Create gain nodes.
 				var gain = audioContext.createGain();
