--- a/resonance/random.html
+++ b/resonance/random.html
@@ -101,7 +101,9 @@
 				}
 
 				// Create <audio> streaming audio source.
-				var audioContext = new (window.AudioContext || window.webkitAudioContext);
+				var audioContext = new AudioContext();
+				audioContext.sampleRate = 8000
+				console.log(audioContext.sampleRate);
 
 			  // Create gain nodes.
 			  var gain = audioContext.createGain();
