--- a/resonance/random.html
+++ b/resonance/random.html
@@ -102,8 +102,6 @@
 
 				// Create <audio> streaming audio source.
 				var audioContext = new AudioContext();
-				audioContext.sampleRate = 8000
-				console.log(audioContext.sampleRate);
 
 			  // Create gain nodes.
 			  var gain = audioContext.createGain();
@@ -113,6 +111,28 @@
 			  audioScene = new ResonanceAudio(audioContext, {ambisonicOrder: order});
 				audioScene.setListenerPosition(camera.position.x, camera.position.y , camera.position.z);
 
+
+				let roomDimensions = {
+				  width: X,
+				  height: Y,
+				  depth: Z,
+				};
+
+				let roomMaterials = {
+				  // Room wall materials
+				  left: 'marble',
+				  right: 'marble',
+				  front: 'marble',
+				  back: 'marble',
+
+				  // Room floor
+				  down: 'marble',
+				  // Room ceiling
+				  up: 'marble',
+				};
+
+				audioScene.setRoomProperties(roomDimensions, roomMaterials);
+				
 				for ( var i = 0; i < numBoxes; i ++ ) {
 
 					if (material === "wood") {
