--- a/resonance/circle.html
+++ b/resonance/circle.html
@@ -116,6 +116,27 @@
 			  audioScene = new ResonanceAudio(audioContext, {ambisonicOrder: order});
 				audioScene.setListenerPosition(camera.position.x, camera.position.y , camera.position.z);
 
+				let roomDimensions = {
+				  width: X,
+				  height: Y,
+				  depth: Z,
+				};
+
+				let roomMaterials = {
+				  // Room wall materials
+				  left: 'marble',
+				  right: 'marble',
+				  front: 'marble',
+				  back: 'marble',
+
+				  // Room floor
+				  down: 'marble',
+				  // Room ceiling
+				  up: 'marble',
+				};
+
+				audioScene.setRoomProperties(roomDimensions, roomMaterials);
+
 				var theta = ((Math.PI*2) / numObjects);
 				for (var i = 1; i <= numObjects; i++) {
 
