--- a/resonance/circle.html
+++ b/resonance/circle.html
@@ -124,15 +124,15 @@
 
 				let roomMaterials = {
 				  // Room wall materials
-				  left: 'marble',
-				  right: 'marble',
-				  front: 'marble',
-				  back: 'marble',
+				  left: 'PlasterSmooth',
+				  right: 'PlasterSmooth',
+				  front: 'PlasterSmooth',
+				  back: 'PlasterSmooth',
 
 				  // Room floor
-				  down: 'marble',
+				  down: 'PlasterSmooth',
 				  // Room ceiling
-				  up: 'marble',
+				  up: 'PlasterSmooth',
 				};
 
 				audioScene.setRoomProperties(roomDimensions, roomMaterials);
