--- a/resonance/random.html
+++ b/resonance/random.html
@@ -111,7 +111,6 @@
 			  audioScene = new ResonanceAudio(audioContext, {ambisonicOrder: order});
 				audioScene.setListenerPosition(camera.position.x, camera.position.y , camera.position.z);
 
-
 				let roomDimensions = {
 				  width: X,
 				  height: Y,
@@ -120,19 +119,19 @@
 
 				let roomMaterials = {
 				  // Room wall materials
-				  left: 'marble',
-				  right: 'marble',
-				  front: 'marble',
-				  back: 'marble',
+				  left: 'PlasterSmooth',
+				  right: 'PlasterSmooth',
+				  front: 'PlasterSmooth',
+				  back: 'PlasterSmooth',
 
 				  // Room floor
-				  down: 'marble',
+				  down: 'PlasterSmooth',
 				  // Room ceiling
-				  up: 'marble',
+				  up: 'PlasterSmooth',
 				};
 
 				audioScene.setRoomProperties(roomDimensions, roomMaterials);
-				
+
 				for ( var i = 0; i < numBoxes; i ++ ) {
 
 					if (material === "wood") {
