--- a/resonance/spiral.html
+++ b/resonance/spiral.html
@@ -127,15 +127,15 @@
 
 				let roomMaterials = {
 				  // Room wall materials
-				  left: 'marble',
-				  right: 'marble',
-				  front: 'marble',
-				  back: 'marble',
+				  left: 'PlasterSmooth',
+				  right: 'PlasterSmooth',
+				  front: 'PlasterSmooth',
+				  back: 'PlasterSmooth',
 
 				  // Room floor
-				  down: 'marble',
+				  down: 'PlasterSmooth',
 				  // Room ceiling
-				  up: 'marble',
+				  up: 'PlasterSmooth',
 				};
 
 				audioScene.setRoomProperties(roomDimensions, roomMaterials);
