--- a/resonance/random.html
+++ b/resonance/random.html
@@ -169,6 +169,7 @@
 						let audioElement = document.createElement('audio');
 						audioElement.src = audioSource;
 						audioElement.crossOrigin = "anonymous";
+						audioElement.playbackRate.value = .5
 						audioElement.load();
 						audioElement.onended = function(){
 							this.currentTime = 0;
