--- a/resonance/cluster.html
+++ b/resonance/cluster.html
@@ -231,6 +231,7 @@
 							let audioElement = document.createElement('audio');
 							audioElement.src = audioSource;
 							audioElement.crossOrigin = "anonymous";
+							audioElement.playbackRate.value = .5
 							audioElement.load();
 							audioElement.onended = function(){
 								this.currentTime = 0;
